src/objects/Product_Filter_List__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adresseløse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adressering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adressevask</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afgående Consignment/Direct Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berigelse af eksisterende Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breve Indland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breve Udland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database vedligehold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-breve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Kommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effektmåling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foliering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frankering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS-håndtering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kørsler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Mile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Mile, øvrige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letgods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokal Kørsler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokale ugeaviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Løsninger, organisk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magasinpost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuel Pakning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modtagerservice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in VF page - if ticked then will show as ticked in list.</description>
        <label>Pre-Select</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Filter List</label>
    <listViews>
        <fullName>All_Product_Filter_List</fullName>
        <columns>NAME</columns>
        <columns>Select__c</columns>
        <columns>ProductFamily__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Filter List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PFL-{0000}</displayFormat>
        <label>Product Filter List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Filter Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>